# bazel-cpp-boilerplate

./: .bazelversion  BUILD  BUILD.bazel  MODULE.bazel  README.md  hello_main.cc  hello_world.cc  hello_world.h  hello_world_test.cc
